<resources>
    <string name="app_name">TravelKeunApp</string>
    <string name="textview" />
    <string name="welcome_to_travelkeun_app">Welcome To Travelkeun App</string>
    <string name="list">List</string>
    <string name="about_me">About Me</string>
    <string name="with_cardview">CardView</string>
    <string name="name">First thing you need to do is enter your name :</string>
    <string name="enter_your_name_here">Enter your name here…</string>
    <string name="get_started">Get Started!</string>
    <string name="hello_there">Hello there,</string>
    <string name="name_here">Your Name Is Here</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="daftar_tempat_liburan">List of Vacation Spots</string>
    <string name="todo" />
    <string name="place_name">Place Name</string>
    <string name="here_s_the_description">Here\'s the description</string>
    <string name="btn_booking">Booking Now</string>
    <string name="description">Description</string>
    <string name="more">More For You</string>
    <string name="more_for_you">More For You</string>
</resources>