<?xml version="1.0" encoding="utf-8"?>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        tools:context=".MainActivity"
        android:layout_height="match_parent"
        >

    <TextView
            android:id="@+id/greetingText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="75dp"
            android:textSize="24sp"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/welcome_to_travelkeun_app"
            app:fontFamily="@font/p_med" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="15dp">
        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="270dp"
            android:layout_height="227dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/image_11"
            android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="18sp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:gravity="center_horizontal|center_vertical"
            app:fontFamily="@font/p_reg"
            app:textAllCaps="false" />

        <EditText
            android:id="@+id/nameTextController"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_name_here"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:autofillHints="" />

        <Button
            android:id="@+id/btn_getStarted"
            android:layout_width="243dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/get_started" />

    </LinearLayout>

