<?xml version="1.0" encoding="utf-8"?>
    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".DetailPage">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/imgFromId"
                android:layout_width="match_parent"
                android:layout_height="215dp"
                android:contentDescription="@string/todo"
                android:scaleType="centerCrop"
                tools:ignore="ImageContrastCheck"
                tools:srcCompat="@tools:sample/avatars" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <TextView
                android:id="@+id/placeName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/place_name"
                android:textSize="22sp"
                app:fontFamily="@font/p_med" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="7dp" />

            <TextView
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:id="@+id/descPart"
                android:textSize="18sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="7dp" />

            <TextView
                android:id="@+id/placeDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/here_s_the_description"
                android:textSize="16sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="7dp" />

            <TextView
                android:id="@+id/moreRecom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/more_for_you"
                android:textSize="18sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="7dp" />

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/about_me">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="125dp"
                        android:layout_height="125dp"
                        android:layout_marginLeft="12dp"
                        android:layout_marginRight="12dp"
                        android:scaleType="centerCrop"
                        app:srcCompat="@drawable/tebing_keraton_jabar" />

                    <ImageView
                        android:layout_width="125dp"
                        android:layout_height="125dp"
                        android:layout_marginEnd="12dp"
                        android:scaleType="centerCrop"
                        app:srcCompat="@drawable/sawah_tegalalang_bali" />

                    <ImageView
                        android:layout_width="125dp"
                        android:layout_height="125dp"
                        android:layout_marginRight="12dp"
                        android:scaleType="centerCrop"
                        app:srcCompat="@drawable/pantai_sendang_biru_jatim" />

                    <ImageView
                        android:layout_width="125dp"
                        android:layout_height="125dp"
                        android:layout_marginRight="12dp"
                        android:scaleType="centerCrop"
                        app:srcCompat="@drawable/pura_uluwatu_bali" />

                    <ImageView
                        android:layout_width="125dp"
                        android:layout_height="125dp"
                        android:layout_marginRight="12dp"
                        android:scaleType="centerCrop"
                        app:srcCompat="@drawable/grojogan_sewu_tawangwangun_jateng" />

                    <ImageView
                        android:layout_width="125dp"
                        android:layout_height="125dp"
                        android:layout_marginEnd="12dp"
                        android:contentDescription="TODO"
                        android:scaleType="centerCrop"
                        app:srcCompat="@drawable/gunung_bromo_jatim" />
                </LinearLayout>
            </HorizontalScrollView>

            <Space
                android:layout_width="match_parent"
                android:layout_height="22dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btn_booking"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_booking" />

            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="40dp" />
        </LinearLayout>
    </ScrollView>