<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:layout_marginTop="15dp"
    android:layout_marginBottom="15dp"
    android:orientation="vertical"
    tools:context=".HomePage" >

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="87dp"
        android:stretchColumns="0">


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hello_there"
                    android:textSize="16sp"
                    app:fontFamily="@font/p_reg" />

                <TextView
                    android:id="@+id/username_receiver"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name_here"
                    android:textSize="20sp"
                    app:fontFamily="@font/p_med" />

            </LinearLayout>

            <Space
                android:layout_width="100dp"
                android:layout_height="match_parent" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/image_11"
                app:civ_border_color="#FF267055"
                app:civ_border_width="2dp" />

        </TableRow>

    </TableLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/daftar_tempat_liburan"
        android:textSize="20sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="19dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_vacation"

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:listitem="@layout/item_row_vacation" />

</LinearLayout>